--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^7.1.2",
     "@mui/styled-engine-sc": "^7.1.1",
     "animate.css": "^4.1.1",
+    "axios": "^1.11.0",
     "lottie-react": "^2.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
